// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseList snapshots renders loading 1`] = `
<div
  className="course-list-loading"
>
  <Spinner
    animation="border"
    className="mie-3"
    screenReaderText="loading"
  />
</div>
`;

exports[`CourseList snapshots with filters 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls
        abitary="filter"
      />
    </div>
  </div>
  <div
    id="course-list-active-filters-container"
  >
    <ActiveCourseFilters
      abitary="filter"
    />
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  />
</div>
`;

exports[`CourseList snapshots with multiple courses and pages 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  >
    <CourseCard
      cardId="foo"
      key="foo"
    />
    <CourseCard
      cardId="bar"
      key="bar"
    />
    <CourseCard
      cardId="baz"
      key="baz"
    />
    <Pagination
      className="mx-auto"
      onPageSelect={[MockFunction setPageNumber]}
      pageCount={3}
      paginationLabel="Course List"
      variant="reduced"
    />
  </div>
</div>
`;

exports[`CourseList snapshots with multiple courses on mobile 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  >
    <CourseCard
      cardId="foo"
      key="foo"
    />
    <CourseCard
      cardId="bar"
      key="bar"
    />
    <CourseCard
      cardId="baz"
      key="baz"
    />
    <Pagination
      className="mx-auto"
      onPageSelect={[MockFunction setPageNumber]}
      pageCount={3}
      paginationLabel="Course List"
      variant="reduced"
    />
  </div>
</div>
`;

exports[`CourseList snapshots with no filters 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  />
</div>
`;
